# fake-vice-bin

./: Cargo.toml  README.md  TODO.md
data/: load_main.fvbs
src/: cli_main.rs  fake_vice_bin.rs  lib.rs  response.rs  response_header.rs  script.rs
